--- a/lunch/lunch/Info.plist
+++ b/lunch/lunch/Info.plist
@@ -40,5 +40,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
